--- a/style.css
+++ b/style.css
@@ -332,15 +332,15 @@ header.header > ul > li.link:hover  > a > svg {
 }
 
 
-header.header > ul > li.link.icon a svg {
+header.header > ul.right > li.link.search a svg {
+  /* border: 1px solid #124ec5; */
   margin: 0 0 -5px 0;
-  width: 20px;
-  height: 20px;
+  width: 23px;
+  height: 23px;
 }
 
 header.header > ul > li.link.theme {
   /* border: 1px solid #124ec5; */
-  margin: 0 0 -5px 0;
   /* rotate: 15deg; */
   width: max-content;
   height: 30px;
