--- a/res.css
+++ b/res.css
@@ -365,6 +365,7 @@
     width: 100%;
     margin: 0;
     padding: 0;
+    gap: 0;
     display: flex;
     flex-flow: column;
     align-items: start;
@@ -385,11 +386,12 @@
     align-items: center;
     justify-content: center;
     gap: 0;
+    margin: 0;
     padding: 0;
   }
 
   header.header > ul.left > li.link > div.drop-down ul.main > li > a {
-    border: 0.002rem solid #6b72809a;
+    /* border: 0.002rem solid #6b72809a; */
     color: #1f2937;
     padding: 2px 5px 2px 10px;
     min-height: 40px;
@@ -404,6 +406,10 @@
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
   }
+
+   header.header > ul.left > li.link > div.drop-down ul.main > li:nth-of-type(odd) > a {
+    background-color: #6b728021;
+   }
 
   header.header > ul > li.link > div.drop-down ul > li:hover {
     background-color: unset;
