--- a/style.css
+++ b/style.css
@@ -1152,10 +1152,10 @@ main.main > section.side .related .related-stories .story > .info > .author > .n
   margin: 0;
   padding: 0;
   display: flex;
+  align-items: center;
   font-family: var(--font-one);
   line-height: 1.4;
   font-size: 0.9rem;
-  flex-flow: column;
   font-weight: 400;
   gap: 0;
 }
