--- a/res.css
+++ b/res.css
@@ -54,20 +54,20 @@
 
   /* Side */
   main.main > section.side {
-    border-top: thin solid #6b7280c2;
+    /* border-top: thin solid #6b7280c2; */
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-    background-color: #ffffff;
+    /* background-color: var(--background); */
     padding: 0 15px;
     width: 100%;
     z-index: 5;
     height: max-content;
     display: flex;
     flex-flow: column;
-    gap: 10px;
+    gap: 0;
     position: fixed;
     overflow-y: scroll;
-    top: calc(var(--vh-height, 100vh) - 50px);
+    top: calc(var(--vh-height, 100vh) - 100px);
     bottom: 0;
     left: 0;
     right: 0;
@@ -131,7 +131,7 @@
 
   header.header > ul.left {
     /* border: 1px solid black; */
-    background-color: #ffffff;
+    background-color: var(--background);
     position: fixed;
     left: calc(100% + 15px);
     flex-flow: column;
