--- a/style.css
+++ b/style.css
@@ -743,7 +743,7 @@ main.main > article.content .fonts .options > span.font:hover {
 }
 
 
-main.main > article.content #content.content {
+main.main > article.content > #content.content {
   /* border: 1px solid #000000; */
   display: flex;
   flex-flow: column;
@@ -752,7 +752,7 @@ main.main > article.content #content.content {
   font-size: 1rem;
 }
 
-main.main > article.content #content.content div.src-image{
+main.main > article.content > #content.content div.src-image{
   /* border: 1px solid #ff0000; */
   padding: 20px 0;
   display: flex;
@@ -762,7 +762,7 @@ main.main > article.content #content.content div.src-image{
   font-size: 1rem;
 }
 
-main.main > article.content #content.content div.src-image figure {
+main.main > article.content > #content.content div.src-image figure {
   /* border: thin #c0c0c0 solid; */
   display: flex;
   flex-flow: column;
@@ -773,19 +773,19 @@ main.main > article.content #content.content div.src-image figure {
   margin: auto;
 }
 
-main.main > article.content #content.content div.src-image figure img {
+main.main > article.content > #content.content div.src-image figure img {
   width: auto;
   height: 100%;
 }
 
-main.main > article.content #content.content div.src-image figure figcaption {
+main.main > article.content > #content.content div.src-image figure figcaption {
   background-color: #dddddd;
   font: italic smaller var(--font-main);
   padding: 3px;
   text-align: center;
 }
 
-main.main > article.content #content.content * {
+main.main > article.content > #content.content * {
   font-size: inherit;
   color: #1f2937;
   transition: all 300ms ease-in-out;
@@ -795,19 +795,19 @@ main.main > article.content #content.content * {
   -o-transition: all 300ms ease-in-out;
 }
 
-main.main > article.content #content.content h2.title {
+main.main > article.content > #content.content h2.title {
   padding: 0% !important;
   font-size: 1.3rem !important;
   line-height: 1.5;
   margin: 10px 0 5px 0;
 }
 
-main.main > article.content #content.content p {
+main.main > article.content > #content.content p {
   margin: 0 0 10px 0;
   line-height: 1.5;
 }
 
-main.main > article.content #content.content a {
+main.main > article.content > #content.content a {
   /* color: #1da1f2; */
   cursor: pointer;
   color: transparent;
@@ -816,21 +816,21 @@ main.main > article.content #content.content a {
   -webkit-background-clip: text;
 }
 
-main.main > article.content #content.content a:hover {
+main.main > article.content > #content.content a:hover {
   text-decoration-color: #21D029 !important;
   text-decoration: underline;
   -moz-text-decoration-color: #21D029 !important;
 }
 
-main.main > article.content #content.content ul,
-main.main > article.content #content.content ol {
+main.main > article.content > #content.content ul,
+main.main > article.content > #content.content ol {
   margin: 10px 0 0 20px;
   line-height: 1.4;
   color: #1f2937;
 }
 
-main.main > article.content #content.content ul a,
-main.main > article.content #content.content ol a {
+main.main > article.content > #content.content ul a,
+main.main > article.content > #content.content ol a {
   color: transparent;
   background: unset;
   color: #1f2937;
@@ -840,8 +840,8 @@ main.main > article.content #content.content ol a {
   -moz-text-decoration-color: #4b556321 !important;
 }
 
-main.main > article.content #content.content ul a:hover,
-main.main > article.content #content.content ol a:hover {
+main.main > article.content > #content.content ul a:hover,
+main.main > article.content > #content.content ol a:hover {
   text-decoration-color: #4b5563bd !important;
   -moz-text-decoration-color: #4b5563bd !important;
 }
@@ -990,6 +990,64 @@ section.responses > .response > .head > span.date {
   font-family: var(--font-mono);
   font-size: 0.9rem;
 }
+
+section.responses > .response > #content {
+  /* border: 1px solid #6b7280; */
+  display: flex;
+  flex-flow: column;
+  color: #53595f;
+  line-height: 1.5;
+  gap: 0;
+  margin: 0;
+  padding: 0;
+}
+
+section.responses > .response > #content.content p {
+  /* border: 1px solid #0b49c7; */
+  margin: 0 0 5px 0;
+  padding: 0;
+  line-height: 1.5;
+}
+
+section.responses > .response > #content.content a {
+  /* color: #1da1f2; */
+  cursor: pointer;
+  color: transparent;
+  background: linear-gradient(103.53deg, #18A565 -6.72%, #21D029 109.77%);
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+section.responses > .response > #content.content a:hover {
+  text-decoration-color: #21D029 !important;
+  text-decoration: underline;
+  -moz-text-decoration-color: #21D029 !important;
+}
+
+section.responses > .response > #content.content ul,
+section.responses > .response > #content.content ol {
+  margin: 10px 0 0 20px;
+  line-height: 1.4;
+  color: #1f2937;
+}
+
+section.responses > .response > #content.content ul a,
+section.responses > .response > #content.content ol a {
+  color: transparent;
+  background: unset;
+  color: #1f2937;
+  font-weight: 500;
+  text-decoration-color: #4b556321 !important;
+  text-decoration: underline;
+  -moz-text-decoration-color: #4b556321 !important;
+}
+
+section.responses > .response > #content.content ul a:hover,
+section.responses > .response > #content.content ol a:hover {
+  text-decoration-color: #4b5563bd !important;
+  -moz-text-decoration-color: #4b5563bd !important;
+}
+
 
 
 
